<resources>
    <string name="app_name">scale</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>

    <string name="cover_image_description">Cover Scale Image</string>
    <string name="textview_scale_code">Enter your device code</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Fragment two -->
    <string name="textview_weight_title">Weight</string>
    <string name="textview_percentage_title">Percentage</string>
    <string name="set_size">Actual set bottle size</string>
</resources>