<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <LinearLayout
        android:id="@+id/globalLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/WeightTitle"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:textSize="22dp"
                            android:text="@string/textview_weight_title"/>


                        <TextView

                            android:id="@+id/WeightSize"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="20dp"
                            android:textSize="130dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:background="@drawable/edit_text_border" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/linear1">

                        <TextView
                            android:id="@+id/PercentageTitle"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:textSize="22dp"
                            android:text="@string/textview_percentage_title"/>


                        <TextView
                            android:id="@+id/PercentageSize"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="20dp"
                            android:textSize="130dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:background="@drawable/edit_text_border" />
                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/readMqttTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read from MQTT"/>

            <TextView
                android:id="@+id/readFromMqtt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/textview_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:contentDescription="@string/cover_image_description"
                android:src="@drawable/minus"
                android:background="@drawable/edit_text_border"/>

            <TextView
                android:id="@+id/readGasSize"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:text="10"
                android:textSize="20dp"
                android:background="@drawable/edit_text_border"/>

            <ImageView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:contentDescription="@string/cover_image_description"
                android:src="@drawable/plus"
                android:background="@drawable/edit_text_border"/>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>